--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -292,6 +292,9 @@
 					RelativePath=".\Config\misc\effectors.ltx">
 				</File>
 				<File
+					RelativePath=".\Config\misc\gulag_tasks.ltx">
+				</File>
+				<File
 					RelativePath=".\Config\misc\items.ltx">
 				</File>
 				<File
@@ -495,10 +498,10 @@
 					RelativePath=".\Config\ui\map_character.xml">
 				</File>
 				<File
-					RelativePath=".\motion_icon.xml">
+					RelativePath=".\Config\ui\motion_icon.xml">
 				</File>
 				<File
-					RelativePath=".\Config\ui\motion_icon.xml">
+					RelativePath=".\motion_icon.xml">
 				</File>
 				<File
 					RelativePath=".\Config\ui\news.xml">
