--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -7704,6 +7704,9 @@
 							<File
 								RelativePath=".\game_sv_deathmatch_process_event.cpp">
 							</File>
+							<File
+								RelativePath=".\game_sv_deathmatch_script.cpp">
+							</File>
 						</Filter>
 						<Filter
 							Name="single"
