--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -1353,6 +1353,9 @@
 					<File
 						RelativePath=".\ef_storage.h">
 					</File>
+					<File
+						RelativePath=".\ef_storage_script.cpp">
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
