--- a/Dima/bge.root/bge/bge/bge.vcproj
+++ b/Dima/bge.root/bge/bge/bge.vcproj
@@ -316,6 +316,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -324,6 +325,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -336,6 +338,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -344,6 +347,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -356,6 +360,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -364,6 +369,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -376,6 +382,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -384,6 +391,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -396,6 +404,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -404,6 +413,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -416,6 +426,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -424,6 +435,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -436,6 +448,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -444,6 +457,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -456,6 +470,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -464,6 +479,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -476,6 +492,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -484,6 +501,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -496,6 +514,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -504,6 +523,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -516,6 +536,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -524,6 +545,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -536,6 +558,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -544,6 +567,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -556,6 +580,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -564,6 +589,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -576,6 +602,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -584,6 +611,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -596,6 +624,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -604,6 +633,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -616,6 +646,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -624,6 +655,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -636,6 +668,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -644,6 +677,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -656,6 +690,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -664,6 +699,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -676,6 +712,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 						<FileConfiguration
@@ -684,6 +721,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 							/>
 						</FileConfiguration>
 					</File>
@@ -691,6 +729,14 @@
 				<Filter
 					Name="engine"
 					>
+					<File
+						RelativePath=".\script_engine.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\script_engine.h"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="lua"
@@ -1204,6 +1250,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 								CompileAs="1"
 							/>
 						</FileConfiguration>
@@ -1213,6 +1260,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="0"
+								WarningLevel="0"
 								CompileAs="1"
 							/>
 						</FileConfiguration>
