--- a/Dima/bge.root/bge/bge/bge.vcproj
+++ b/Dima/bge.root/bge/bge/bge.vcproj
@@ -730,6 +730,10 @@
 					Name="engine"
 					>
 					<File
+						RelativePath=".\script.h"
+						>
+					</File>
+					<File
 						RelativePath=".\script_engine.cpp"
 						>
 					</File>
