--- a/Dima/bge.root/bge/bge/bge.vcproj
+++ b/Dima/bge.root/bge/bge/bge.vcproj
@@ -746,6 +746,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\script_export_space.h"
+						>
+					</File>
+					<File
 						RelativePath=".\script_space.h"
 						>
 					</File>
