--- a/Dima/bge.root/bge/bge/bge.vcproj
+++ b/Dima/bge.root/bge/bge/bge.vcproj
@@ -742,6 +742,14 @@
 						>
 					</File>
 					<File
+						RelativePath=".\script_engine_export.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\script_engine_export.h"
+						>
+					</File>
+					<File
 						RelativePath=".\script_engine_inline.h"
 						>
 					</File>
