--- a/Dima/bge.root/bge/bge/bge.vcproj
+++ b/Dima/bge.root/bge/bge/bge.vcproj
@@ -1526,6 +1526,10 @@
 					RelativePath=".\console_ui.h"
 					>
 				</File>
+				<File
+					RelativePath=".\console_ui_script.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
