--- a/Dima/bge.root/bge/bge/bge.vcproj
+++ b/Dima/bge.root/bge/bge/bge.vcproj
@@ -754,6 +754,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\script_engine_script.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\script_export_space.h"
 						>
 					</File>
