--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -4826,6 +4826,9 @@
 						RelativePath=".\script_engine_export.h">
 					</File>
 					<File
+						RelativePath=".\script_engine_help.cpp">
+					</File>
+					<File
 						RelativePath=".\script_engine_inline.h">
 					</File>
 					<File
