--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -498,10 +498,10 @@
 					RelativePath=".\Config\ui\map_character.xml">
 				</File>
 				<File
-					RelativePath=".\Config\ui\motion_icon.xml">
+					RelativePath=".\motion_icon.xml">
 				</File>
 				<File
-					RelativePath=".\motion_icon.xml">
+					RelativePath=".\Config\ui\motion_icon.xml">
 				</File>
 				<File
 					RelativePath=".\Config\ui\news.xml">
@@ -1289,6 +1289,9 @@
 			</File>
 			<File
 				RelativePath=".\scripts\xr_kamp.script">
+			</File>
+			<File
+				RelativePath=".\scripts\xr_light.script">
 			</File>
 			<File
 				RelativePath=".\scripts\xr_logic.script">
