--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -5139,6 +5139,9 @@
 							RelativePath="Actor.h">
 						</File>
 						<File
+							RelativePath=".\actor_anim_defs.h">
+						</File>
+						<File
 							RelativePath=".\actor_communication.cpp">
 						</File>
 						<File
