--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -261,6 +261,9 @@
 					RelativePath=".\Config\gameplay\info_lchanger_ico.xml">
 				</File>
 				<File
+					RelativePath=".\info_level_tips.xml">
+				</File>
+				<File
 					RelativePath=".\Config\gameplay\info_news.xml">
 				</File>
 				<File
@@ -498,10 +501,10 @@
 					RelativePath=".\Config\ui\map_character.xml">
 				</File>
 				<File
-					RelativePath=".\motion_icon.xml">
+					RelativePath=".\Config\ui\motion_icon.xml">
 				</File>
 				<File
-					RelativePath=".\Config\ui\motion_icon.xml">
+					RelativePath=".\motion_icon.xml">
 				</File>
 				<File
 					RelativePath=".\Config\ui\news.xml">
