--- a/xr_3da/xrRender_R2/xrRender_R2.vcproj
+++ b/xr_3da/xrRender_R2/xrRender_R2.vcproj
@@ -568,6 +568,12 @@
 					RelativePath="Blender_detail_still.h">
 				</File>
 				<File
+					RelativePath=".\Blender_Lm(EbB).cpp">
+				</File>
+				<File
+					RelativePath=".\Blender_Lm(EbB).h">
+				</File>
+				<File
 					RelativePath=".\Blender_Model_EbB.cpp">
 				</File>
 				<File
