--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -1258,6 +1258,9 @@
 				RelativePath=".\scripts\xr_commander.script">
 			</File>
 			<File
+				RelativePath=".\scripts\xr_death.script">
+			</File>
+			<File
 				RelativePath=".\scripts\xr_dialogs.script">
 			</File>
 			<File
